# flask_micro

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  docker-compose.yaml  pyproject.toml  pytest.ini  wait_for.sh
nginx/: Dockerfile  flask_micro.conf
service_a/: Dockerfile  __init__.py  api.py  app.py  app_factory.py  celery_app.py  celerybeat-schedule  config.py  main.py  misc.py  models.py  producer.py  pyproject.toml  repositories.py  schemas.py  tasks.py
service_a/migrations/: env.py
service_a/migrations/versions/: 2fd5e781db13_initial.py
service_a/tests/: conftest.py  factories.py  test_api.py  test_app_factory.py  test_models.py  test_producer.py  test_tasks.py
service_a/web_app/: api.py  app_factory.py  celery_app.py  celerybeat-schedule  config.py  extensions.py  main.py  models.py  producer.py  repositories.py  schemas.py  tasks.py
service_b/: Dockerfile  api.py  app.py  app_factory.py  celery_app.py  config.py  consumer.py  main.py  models.py  repositories.py  schemas.py
service_b/migrations/: alembic.ini
service_b/migrations/versions/: 0617f0ae1ca0_initial_migration.py
service_b/tests/: conftest.py  factories.py  test_api.py  test_models.py
service_b/web_app/: api.py  app_factory.py  config.py  consumer.py  main.py  misc.py  models.py  repositories.py
